Fix for new print-setting collapse-container

--- a/scss/ui/_collapse.scss
+++ b/scss/ui/_collapse.scss
@@ -1,14 +1,14 @@
 .collapse-container {
   overflow: hidden;
   position: relative;
-  /*transition: all 0.3s;*/
+  transition: all 0.05s;
   height: 100%;
 }
 
 .collapse-container-no-height {
   overflow: hidden;
   position: relative;
-  /*transition: all 0.3s;*/
+  transition: all 0.05s;
 }
 
 .collapse {
